[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Level.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Dungeon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Warp.tscn" type="PackedScene" id=4]

[node name="Level" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Warp" parent="." instance=ExtResource( 4 )]

[node name="YSort" type="YSort" parent="."]

[node name="Dungeon" parent="YSort" instance=ExtResource( 2 )]

[node name="Player" parent="YSort" instance=ExtResource( 3 )]

[node name="GhostSpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="entered" from="Warp" to="." method="_on_Warp_entered"]
[connection signal="was_hit" from="YSort/Player" to="." method="_on_Player_was_hit"]
[connection signal="timeout" from="GhostSpawnTimer" to="." method="_on_GhostSpawnTimer_timeout"]
